--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ a {
     cursor: pointer;
     font-size: 14px;
     transition: background 0.3s;
+    text-align: center;
 }
 
 .signout-btn:hover {
@@ -252,117 +253,89 @@ a {
 }
 
 .recipe-card {
-    background: white;
-    border-radius: 8px;
-    border: 1px solid rgba(0, 0, 0, 0.06);
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06);
     display: flex;
-    position: relative;
-    transition: transform 0.3s;
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: #fff;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.06);
     width: 100%;
+    min-height: 218px;
 }
 
-.recipe-card:hover {
-    transform: translateY(-4px);
+/* Tỷ lệ chia 37.4% : 62.6% tương ứng 218 : 364.5 */
+.card-left {
+    width: 37.4%;
+    position: relative;
+}
+
+.card-right {
+    width: 62.6%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .card-badge {
-    width: 33%;
-    padding-top: 10px;
-    padding-left: 10px;
-}
-
-.badge {
-    color: #f57c00;
-    font-size: 12px;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    background-color: white;
+    padding: 6px 12px;
+    border-radius: 999px;
+    font-size: 13px;
     font-weight: bold;
-    background: #fff3e0;
-    border-radius: 20px;
-    padding: 6px;
-    text-align: center;
-}
-
-.card-body {
-    padding: 10px 10px 0 10px;
-    width: 67%;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
 .card-header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin-bottom: 32px;
+    align-items: start;
+    padding: 20px;
 }
 
-.recipe-title {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    line-height: 1.3;
-}
-
-.card-meta {
-    margin: 12px 0px 20px 28px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.author {
-    font-size: 14px;
-    color: #676A6C;
-}
-
-/* =============== LIKES =============== */
 .likes {
-    /* margin-top: auto; */
-    font-size: 13px;
-    color: #e74c3c;
-    /* text-align: right; */
-    border: 1px #EEEEEE solid;
-    border-radius: 4px;
-    padding: 6px 7px;
-    height: 28px;
-    width: 55px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    gap: 6px;
+    color: #CC5965;
+    font-weight: 500;
     cursor: pointer;
 }
 
+.recipe-title {
+    font-size: 16px;
+    margin-bottom: 6px;
+}
+
+.author,
 .tags {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 20px;
-    letter-spacing: 0%;
-    vertical-align: middle;
-    color: #676A6C;
-}
-
-/* =============== NUTRITION GRID =============== */
-.nutrition-table {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 10px;
-    text-align: center;
-    padding: 14px 0;
-    border-top: 1px solid #eee;
     font-size: 14px;
-    color: #444;
+    color: #666;
+    margin-bottom: 4px;
 }
 
-.nutrition-table div {
-    line-height: 1.4;
+.nutrition-table {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px 20px 20px;
 }
 
-.nutrition-table strong {
-    color: #333;
-    font-weight: bold;
-    display: block;
-    margin-top: 4px;
+.nutrient {
     font-size: 13px;
+    text-align: center;
 }
+
 
 
 /* =============== PAGINATION =============== */
@@ -388,9 +361,7 @@ a {
     gap: 8px;
 }
 
-.page-btn {
-
-}
+.page-btn {}
 
 .pagination button:hover {
     background: #ccc;
@@ -766,5 +737,4 @@ a {
 .page-btn:disabled {
     opacity: 0.5;
     cursor: not-allowed;
-  }
-  
+}
