--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ a {
 
 .sort-group i:hover {
     color: #CC5965;
-  }
+}
 
 .sort-group select {
     border: none;
@@ -678,10 +678,34 @@ a {
     margin-top: 20px;
     border-top: 1px solid #eee;
     display: flex;
-    justify-content: flex-end;
-    gap: 12px;
+    justify-content: space-between;
+    /* gap: 12px; */
     background: #fff;
 }
+
+.modal-footer .modal-footer-left {
+    margin-left: 20px;
+}
+
+.modal-footer .modal-footer-right {
+    margin-right: 20px;
+    display: flex;
+    gap: 20px;
+}
+
+#btn-delete {
+    padding: 6px 12px;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+#btn-delete:hover {
+    color: #fff;
+    background-color: #c62828;
+    transform: scale(1.05);
+}
+
 
 .modal-footer button {
     padding: 8px 16px;
@@ -716,31 +740,40 @@ a {
 /* ------------------------ */
 .recipes-actions {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 24px;
-    margin-bottom: 30px;
+    gap: 10px;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
-.favorites-toggle {
-    border: 1px #EEEEEE solid;
-    padding: 8px 13px;
-}
-
-.favorites-toggle,
-.my-recipes-btn {
-    font-size: 14px;
-    color: #444;
+.recipes-actions .btn-action {
+    padding: 8px 16px;
+    border: 1px solid #ddd;
+    background-color: #fff;
+    color: #333;
+    border-radius: 6px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 0.3s ease;
     display: flex;
     align-items: center;
     gap: 6px;
-    cursor: pointer;
 }
 
-.favorites-toggle i,
-.my-recipes-btn i {
-    color: #e74c3c;
+.recipes-actions .btn-action i.fa-heart {
+    color: #e57373;
+    /* đỏ nhẹ */
 }
+
+.recipes-actions .btn-action:hover {
+    background-color: #f1f1f1;
+}
+
+.recipes-actions .btn-action.active {
+    background-color: #4caf50;
+    color: #fff;
+    border-color: #4caf50;
+}
+
 
 .recipes-header {
     display: flex;
