--- a/css/recipe-detail.css
+++ b/css/recipe-detail.css
@@ -24,17 +24,48 @@
     flex-direction: column;
     gap: 10px;
     background-color: white;
-    height: 70%;
+    height: fit-content;
     padding: 30px 15px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     border-radius: 10px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
 }
 
+.summary-info {
+    display: flex;
+    justify-content: space-between;
+}
+
+.summary-image {
+    width: 100%;
+}
+
+.summary-image img {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.summary-tags {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.summary-tags .tag {
+    padding: 6px 5px;
+    border: 1px #ccc solid;
+    display: flex;
+    align-items: center;
+}
+
+.summary-tags .tag img {
+    width: 16px;
+    height: 16px;
+}
+
 .recipe-meta {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
@@ -243,4 +274,68 @@
 .micronutrient-table-box td {
     padding: 6px 10px;
     border-bottom: 1px solid #eee;
+}
+
+
+.global-analysis,
+.macro-piechart {
+  background: #fff;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+}
+
+.macro-piechart {
+  margin-top: 30px;
+}
+
+.energy-summary {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin-top: 20px;
+}
+
+.circle-item {
+  text-align: center;
+}
+
+.circle {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: #000;
+  border: 4px solid #ddd;
+  background-color: #f5f5f5;
+}
+
+#macroPieChart {
+  max-width: 300px;
+  margin: 20px auto 0;
+}
+
+#fatValue {
+  font-size: 16px;
+}
+
+.circle-fat {
+  border: 5px solid #e57373;
+}
+
+.circle-carb {
+  border: 5px solid #ffb74d;
+}
+
+.circle-protein {
+  border: 5px solid #4db6ac;
+}
+
+.circle-fiber {
+  border: 5px solid #90a4ae;
 }
